# Gambler

./: CMakeLists.txt
bot/: CMakeLists.txt
bot/src/: bot.c  main.c
discord/: CMakeLists.txt
discord/include/: config.h  discord.h  intents.h
discord/include/discord/: api.h  events.h  function_types.h  intents.h  message.h  types.h
discord/include/internal/: memory.h
discord/include/utils/: jsonutils.h  time.h  webutils.h
discord/src/: discord.c  jsmn.c  main.c
discord/src/discord/: api.c  events.c  message.c  types.c
discord/src/internal/: memory.c
discord/src/utils/: jsonutils.c  time.c  webutils.c
launchwrapper/: CMakeLists.txt
launchwrapper/src/: main.c
